--- a/app/src/main/res/layout/fragment_shoe_list.xml
+++ b/app/src/main/res/layout/fragment_shoe_list.xml
@@ -3,83 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        tools:context=".ShoeListFragment">
+    <androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/shoe_list_layout"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/common_padding">
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/shoe_card"
-                style="@style/card_container"
+            <LinearLayout
+                android:id="@+id/shoe_list_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="8dp"
+                tools:context=".ShoeListFragment">
 
-                <LinearLayout
-                    android:id="@+id/single_card_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="@dimen/card_padding">
+            </LinearLayout>
+        </ScrollView>
 
-                    <TextView
-                        android:id="@+id/shoe_name_text"
-                        style="@style/card_heading_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Shoe 1"
-                        tools:text="Shoe 1" />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_shoe_floating_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:contentDescription="@string/add_new_shoe_fab_text"
+            android:src="@drawable/ic_add_new_shoe_24"
+            app:fabSize="mini"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-                    <LinearLayout
-                        android:id="@+id/shoe_info_layout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:id="@+id/shoe_company_text"
-                            style="@style/card_secondary_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Shoe Company"
-                            tools:text="Shoe Company" />
-
-                        <TextView
-                            android:id="@+id/shoe_size_text"
-                            style="@style/card_secondary_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Size: 10 US"
-                            tools:text="Size: 10 US" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/shoe_description_text"
-                        style="@style/card_secondary_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="This shoes is made of pure leather and covered in warranty.\nNew version available at every Fall of the year."
-                        tools:text="This shoes is made of pure leather and covered in warranty.\nNew version available at every Fall of the year." />
-
-                </LinearLayout>
-
-            </com.google.android.material.card.MaterialCardView>
-
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:contentDescription="@string/add_new_shoe_fab_text"
-                android:src="@drawable/ic_add_new_shoe_24"
-                app:fabSize="mini" />
-
-        </LinearLayout>
-    </ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
