--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -1,192 +1,210 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/shoe_detail_layout"
+    <data>
+        <variable
+            name="shoesViewModel"
+            type="com.udacity.shoestore.viewmodels.ShoesViewModel" />
+        <variable
+            name="shoeInfoFragment"
+            type="com.udacity.shoestore.ShoeDetailFragment" />
+    </data>
+    
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context=".ShoeDetailFragment">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-        <TextView
-            android:id="@+id/new_shoe_title_text"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/shoe_detail_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
-            android:fontFamily="@font/allerta"
-            android:text="@string/add_new_shoe_heading"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Add new shoe" />
+            tools:context=".ShoeDetailFragment">
 
-        <TextView
-            android:id="@+id/shoe_name_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
-            android:fontFamily="@font/allerta"
-            android:text="@string/shoe_name_title"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
-            android:textSize="16sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_name_edit"
-            app:layout_constraintEnd_toStartOf="@+id/shoe_name_edit"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/new_shoe_title_text"
-            tools:text="Name" />
+            <TextView
+                android:id="@+id/new_shoe_title_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/allerta"
+                android:text="@string/add_new_shoe_heading"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Add new shoe" />
 
-        <EditText
-            android:id="@+id/shoe_name_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="12dp"
-            android:ems="10"
-            android:hint="@string/enter_shoe_name_hint"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/shoe_name_text"
-            app:layout_constraintTop_toBottomOf="@+id/new_shoe_title_text" />
+            <TextView
+                android:id="@+id/shoe_name_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/allerta"
+                android:text="@string/shoe_name_title"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
+                android:textSize="16sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/shoe_name_edit"
+                app:layout_constraintEnd_toStartOf="@+id/shoe_name_edit"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/new_shoe_title_text"
+                tools:text="Name" />
 
-        <TextView
-            android:id="@+id/shoe_company_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
-            android:fontFamily="@font/allerta"
-            android:text="@string/shoe_company_title"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
-            android:textSize="16sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_company_edit"
-            app:layout_constraintEnd_toStartOf="@+id/shoe_company_edit"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/shoe_name_text"
-            tools:text="Company" />
+            <EditText
+                android:id="@+id/shoe_name_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="12dp"
+                android:ems="10"
+                android:text="@{shoesViewModel.shoeName}"
+                android:hint="@string/enter_shoe_name_hint"
+                android:inputType="textPersonName"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/shoe_name_text"
+                app:layout_constraintTop_toBottomOf="@+id/new_shoe_title_text" />
 
-        <EditText
-            android:id="@+id/shoe_company_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="12dp"
-            android:ems="10"
-            android:hint="@string/enter_shoe_company_hint"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/shoe_company_text"
-            app:layout_constraintTop_toBottomOf="@+id/shoe_name_edit" />
+            <TextView
+                android:id="@+id/shoe_company_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/allerta"
+                android:text="@string/shoe_company_title"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
+                android:textSize="16sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/shoe_company_edit"
+                app:layout_constraintEnd_toStartOf="@+id/shoe_company_edit"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/shoe_name_text"
+                tools:text="Company" />
 
-        <TextView
-            android:id="@+id/shoe_size_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
-            android:fontFamily="@font/allerta"
-            android:text="@string/shoe_size_title"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
-            android:textSize="16sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_size_edit"
-            app:layout_constraintEnd_toStartOf="@+id/shoe_size_edit"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/shoe_company_text"
-            tools:text="Size" />
+            <EditText
+                android:id="@+id/shoe_company_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="12dp"
+                android:ems="10"
+                android:hint="@string/enter_shoe_company_hint"
+                android:text="@{shoesViewModel.shoeCompany}"
+                android:inputType="textPersonName"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/shoe_company_text"
+                app:layout_constraintTop_toBottomOf="@+id/shoe_name_edit" />
 
-        <EditText
-            android:id="@+id/shoe_size_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="12dp"
-            android:ems="10"
-            android:hint="@string/enter_shoe_size_hint"
-            android:inputType="numberDecimal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/shoe_size_text"
-            app:layout_constraintTop_toBottomOf="@+id/shoe_company_edit" />
+            <TextView
+                android:id="@+id/shoe_size_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/allerta"
+                android:text="@string/shoe_size_title"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
+                android:textSize="16sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/shoe_size_edit"
+                app:layout_constraintEnd_toStartOf="@+id/shoe_size_edit"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/shoe_company_text"
+                tools:text="Size" />
 
-        <TextView
-            android:id="@+id/shoe_detail_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
-            android:fontFamily="@font/allerta"
-            android:text="@string/shoe_notes_title"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
-            android:textSize="16sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_detail_edit"
-            app:layout_constraintEnd_toStartOf="@+id/shoe_detail_edit"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/shoe_size_text"
-            tools:text="Notes" />
+            <EditText
+                android:id="@+id/shoe_size_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="12dp"
+                android:ems="10"
+                android:hint="@string/enter_shoe_size_hint"
+                android:text="@{shoesViewModel.shoeSize}"
+                android:inputType="numberDecimal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/shoe_size_text"
+                app:layout_constraintTop_toBottomOf="@+id/shoe_company_edit" />
 
-        <EditText
-            android:id="@+id/shoe_detail_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="12dp"
-            android:ems="10"
-            android:hint="@string/enter_shoe_note_hint"
-            android:inputType="textMultiLine"
-            android:lines="3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/shoe_detail_text"
-            app:layout_constraintTop_toBottomOf="@+id/shoe_size_edit" />
+            <TextView
+                android:id="@+id/shoe_detail_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/allerta"
+                android:text="@string/shoe_notes_title"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
+                android:textSize="16sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/shoe_detail_edit"
+                app:layout_constraintEnd_toStartOf="@+id/shoe_detail_edit"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/shoe_size_text"
+                tools:text="Notes" />
 
-        <Button
-            android:id="@+id/save_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/allerta"
-            android:text="@string/save_btn_text"
-            app:layout_constraintBaseline_toBaselineOf="@+id/cancel_btn"
-            app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/shoe_detail_edit" />
+            <EditText
+                android:id="@+id/shoe_detail_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="12dp"
+                android:ems="10"
+                android:hint="@string/enter_shoe_note_hint"
+                android:text="@{shoesViewModel.shoeInfo}"
+                android:inputType="textMultiLine"
+                android:lines="3"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/shoe_detail_text"
+                app:layout_constraintTop_toBottomOf="@+id/shoe_size_edit" />
 
-        <Button
-            android:id="@+id/cancel_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/allerta"
-            android:text="@string/cancel_btn_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/save_btn"
-            app:layout_constraintTop_toBottomOf="@+id/shoe_detail_edit" />
+            <Button
+                android:id="@+id/save_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/allerta"
+                android:text="@string/save_btn_text"
+                android:onClick="@{() -> shoeInfoFragment.saveShoeItem()}"
+                app:layout_constraintBaseline_toBaselineOf="@+id/cancel_btn"
+                app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/shoe_detail_edit" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <Button
+                android:id="@+id/cancel_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/allerta"
+                android:onClick="@{() -> shoeInfoFragment.goToShoeListFragment()}"
+                android:text="@string/cancel_btn_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/save_btn"
+                app:layout_constraintTop_toBottomOf="@+id/shoe_detail_edit" />
 
-</androidx.core.widget.NestedScrollView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
+</layout>
