--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -5,11 +5,14 @@
 
     <data>
         <variable
-            name="shoesViewModel"
-            type="com.udacity.shoestore.viewmodels.ShoesViewModel" />
+            name="shoe"
+            type="com.udacity.shoestore.models.Shoe" />
         <variable
             name="shoeInfoFragment"
             type="com.udacity.shoestore.ShoeDetailFragment" />
+        <variable
+            name="Convert"
+            type="com.udacity.shoestore.utility.Converter" />
     </data>
     
     <androidx.core.widget.NestedScrollView
@@ -66,7 +69,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="12dp"
                 android:ems="10"
-                android:text="@={shoesViewModel.shoeName}"
+                android:text="@={shoe.name}"
                 android:hint="@string/enter_shoe_name_hint"
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -101,6 +104,7 @@
                 android:layout_marginEnd="12dp"
                 android:ems="10"
                 android:hint="@string/enter_shoe_company_hint"
+                android:text="@={shoe.company}"
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/shoe_company_text"
@@ -134,6 +138,7 @@
                 android:layout_marginEnd="12dp"
                 android:ems="10"
                 android:hint="@string/enter_shoe_size_hint"
+                android:text="@{Convert.toText(shoe.size)}"
                 android:inputType="numberDecimal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/shoe_size_text"
@@ -167,6 +172,7 @@
                 android:layout_marginEnd="12dp"
                 android:ems="10"
                 android:hint="@string/enter_shoe_note_hint"
+                android:text="@={shoe.description}"
                 android:inputType="textMultiLine"
                 android:lines="3"
                 app:layout_constraintEnd_toEndOf="parent"
