Logout option in overflow has been implemented on Shoe List screen

--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -138,7 +138,7 @@
                 android:layout_marginEnd="12dp"
                 android:ems="10"
                 android:hint="@string/enter_shoe_size_hint"
-                android:text="@{Convert.toText(shoe.size)}"
+                android:text="@={Convert.toText(shoe.size)}"
                 android:inputType="numberDecimal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/shoe_size_text"
