--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="loginFragment"
+            type="com.udacity.shoestore.LoginFragment" />
+    </data>
+    
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/loginConstraint"
         android:layout_width="match_parent"
@@ -65,26 +71,41 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/password_text" />
 
+        <TextView
+            android:id="@+id/validation_error_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="16dp"
+            android:fontFamily="@font/allerta"
+            android:textColor="@color/design_default_color_error"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/password_edit"
+            tools:text="Validation Text" />
+
         <Button
             android:id="@+id/login_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="@string/login_btn_text"
-            app:layout_constraintBaseline_toBaselineOf="@+id/signup_btn"
+            android:onClick="@{() -> loginFragment.tryToLogin()}"
+            app:layout_constraintBaseline_toBaselineOf="@+id/guest_btn"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/signup_btn"/>
+            app:layout_constraintRight_toLeftOf="@+id/guest_btn"/>
 
         <Button
-            android:id="@+id/signup_btn"
+            android:id="@+id/guest_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/signup_btn_text"
-            app:layout_constraintRight_toRightOf="parent"
+            android:onClick="@{() -> loginFragment.goToWelcomePage()}"
+            android:text="@string/guest_btn_text"
             app:layout_constraintLeft_toRightOf="@+id/login_btn"
-            app:layout_constraintTop_toBottomOf="@+id/password_edit" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/validation_error_text" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
