--- a/app/src/main/res/layout/fragment_shoe_list.xml
+++ b/app/src/main/res/layout/fragment_shoe_list.xml
@@ -31,9 +31,11 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:layout_gravity="bottom|end"
             android:contentDescription="@string/add_new_shoe_fab_text"
             android:src="@drawable/ic_add_new_shoe_24"
-            app:fabSize="mini"
+            app:fabSize="auto"
+            android:elevation="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
