--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="blue">#1976D2</color>
+    <color name="blue_dark">#004BA0</color>
+    <color name="blue_light">#63A4FF</color>
+    <color name="violet">#C8C2E9</color>
+    <color name="violet_dark">#9792B7</color>
+    <color name="violet_light">#FBF5FF</color>
 </resources>
