--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="violet">#C8C2E9</color>
     <color name="violet_dark">#9792B7</color>
     <color name="violet_light">#FBF5FF</color>
+    <color name="orange">#DE3226</color>
 </resources>
