--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -106,6 +106,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:backgroundTint="?attr/colorSecondaryVariant"
             android:onClick="@{() -> loginFragment.goToWelcomePage()}"
             android:text="@string/guest_btn_text"
             app:layout_constraintEnd_toEndOf="parent"
