Final touch in UI changes

--- a/app/src/main/res/layout/fragment_instruction.xml
+++ b/app/src/main/res/layout/fragment_instruction.xml
@@ -18,9 +18,9 @@
                 android:id="@+id/instruction_line1_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="@dimen/common_extra_padding"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="@dimen/common_extra_padding"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/allerta"
                 android:text="@string/instruction_line1"
@@ -34,9 +34,9 @@
                 android:id="@+id/instruction_line2_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginStart="@dimen/common_extra_padding"
+                android:layout_marginTop="@dimen/common_extra_padding"
+                android:layout_marginEnd="@dimen/common_extra_padding"
                 android:fontFamily="@font/allerta"
                 android:text="@string/instruction_line2"
                 android:textSize="16sp"
