--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="@dimen/common_extra_padding"
                 android:layout_marginEnd="8dp"
                 android:fontFamily="@font/allerta"
                 android:text="@string/add_new_shoe_heading"
@@ -40,47 +40,13 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Add new shoe" />
 
-            <!--<TextView
-                android:id="@+id/shoe_name_text"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="8dp"
-                android:fontFamily="@font/allerta"
-                android:text="@string/shoe_name_title"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
-                android:textSize="16sp"
-                app:layout_constraintBaseline_toBaselineOf="@+id/shoe_name_edit"
-                app:layout_constraintEnd_toStartOf="@+id/shoe_name_edit"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintHorizontal_chainStyle="spread"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/new_shoe_title_text"
-                tools:text="Name" />
--->
-            <!--<EditText
-                android:id="@+id/shoe_name_edit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="12dp"
-                android:ems="10"
-                android:text="@={shoe.name}"
-                android:hint="@string/enter_shoe_name_hint"
-                android:inputType="textPersonName"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/shoe_name_text"
-                app:layout_constraintTop_toBottomOf="@+id/new_shoe_title_text" />-->
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/shoe_name_layout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="@dimen/common_extra_padding"
                 android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="@dimen/common_extra_padding"
                 android:hint="@string/enter_shoe_name_hint_text"
                 app:endIconMode="clear_text"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -104,9 +70,9 @@
                 android:id="@+id/shoe_company_layout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="@dimen/common_extra_padding"
                 android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="@dimen/common_extra_padding"
                 android:hint="@string/enter_shoe_company_hint_text"
                 app:endIconMode="clear_text"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -130,9 +96,9 @@
                 android:id="@+id/shoe_size_layout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="@dimen/common_extra_padding"
                 android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="@dimen/common_extra_padding"
                 android:hint="@string/enter_shoe_size_hint_text"
                 app:endIconMode="clear_text"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -156,9 +122,9 @@
                 android:id="@+id/shoe_info_layout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="@dimen/common_extra_padding"
                 android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="@dimen/common_extra_padding"
                 android:hint="@string/enter_shoe_note_hint_text"
                 app:endIconMode="clear_text"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -199,7 +165,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:layout_marginTop="64dp"
+                android:layout_marginTop="@dimen/common_extra_padding"
                 android:fontFamily="@font/allerta"
                 android:onClick="@{() -> shoeInfoFragment.saveShoeItem()}"
                 android:text="@string/save_btn_text"
@@ -214,7 +180,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="@dimen/common_extra_padding"
                 android:layout_marginEnd="12dp"
                 android:backgroundTint="?attr/colorSecondaryVariant"
                 android:fontFamily="@font/allerta"
