--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -19,9 +19,9 @@
             android:id="@+id/shoe_icon_image"
             android:layout_width="0dp"
             android:layout_height="225dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="@dimen/common_extra_padding"
+            android:layout_marginTop="@dimen/common_extra_padding"
+            android:layout_marginEnd="@dimen/common_extra_padding"
             android:src="@drawable/ic_launcher_foreground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,9 +32,9 @@
             android:id="@+id/email_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/common_extra_padding"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/common_extra_padding"
             android:hint="@string/email_hint_text"
             app:endIconMode="clear_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -56,9 +56,9 @@
             android:id="@+id/password_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="@dimen/common_extra_padding"
+            android:layout_marginTop="@dimen/common_extra_padding"
+            android:layout_marginEnd="@dimen/common_extra_padding"
             android:hint="@string/password_hint_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -79,9 +79,9 @@
             android:id="@+id/validation_error_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/common_extra_padding"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/common_extra_padding"
             android:fontFamily="@font/allerta"
             android:textColor="@color/design_default_color_error"
             app:layout_constraintEnd_toEndOf="parent"
@@ -93,7 +93,7 @@
             android:id="@+id/login_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/common_extra_padding"
             android:onClick="@{() -> loginFragment.tryToLogin()}"
             android:text="@string/login_btn_text"
             app:layout_constraintBaseline_toBaselineOf="@+id/guest_btn"
