--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -18,9 +18,9 @@
                 android:id="@+id/shoe_gif_imageView"
                 android:layout_width="0dp"
                 android:layout_height="387dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginStart="@dimen/common_extra_padding"
+                android:layout_marginTop="@dimen/common_extra_padding"
+                android:layout_marginEnd="@dimen/common_extra_padding"
                 android:src="@drawable/welcome_shoe_image2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -30,9 +30,9 @@
                 android:id="@+id/instruction_line1_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="@dimen/common_extra_padding"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="@dimen/common_extra_padding"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/allerta"
                 android:text="@string/welcome_line1"
@@ -46,9 +46,9 @@
                 android:id="@+id/welcome_line2_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="@dimen/common_extra_padding"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="@dimen/common_extra_padding"
                 android:fontFamily="@font/allerta"
                 android:text="@string/welcome_line2"
                 android:textSize="16sp"
@@ -61,7 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="@dimen/common_extra_padding"
                 android:fontFamily="@font/allerta"
                 android:text="@string/welcome_next_btn_text"
                 app:layout_constraintBottom_toBottomOf="parent"
