--- a/app/src/main/res/layout/shoe_item.xml
+++ b/app/src/main/res/layout/shoe_item.xml
@@ -12,8 +12,7 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/shoe_card"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="4dp">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:id="@+id/single_card_layout"
